refactored domain model